--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,8 @@
 
   <link rel="apple-touch-icon" href="assets/img/appicon.png">
 
-  <link rel="manifest" href="manifest.json">
+  <!-- <link rel="manifest" href="/manifest.json">
+   -->
 </head>
 
 <body>
